--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/mmaksymovych/training#readme",
   "dependencies": {
-    "events": "^3.0.0"
+    "events": "^3.0.0",
+    "marko": "^4.23.4"
   },
   "devDependencies": {
     "jest": "^23.6.0"
