--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "marko": "^4.23.4"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "eslint": "^7.17.0",
+    "jest": "^23.6.0",
+    "prettier": "^2.2.1"
   }
 }
