--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "node": true,
+        "es2021": true,
+        "jest/globals": true
     },
+    "plugins": ["jest"],
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12,
